# EI-Agent

./: .gitmodules  CHANGELOG.md  Makefile.am  README  README.md  VERSION  WISEAgent.sln  WISEAgent_VS2015.sln  build-wiseagent.sh  configure.ac
Include/: WISEConnector.h  WISEConnectorEx.h  WiseCarrierEx_MQTT.h  WiseCarrier_MQTT.h  susiaccess_def.h  susiaccess_handler_api.h  susiaccess_handler_ex_api.h  susiaccess_handler_mgmt.h  svnversion.h  wisepaas_01_def.h  wisepaas_02_def.h
Library3rdParty/AdvLog/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure
Library3rdParty/AdvLog/Tools/AdvJSON/: Makefile  advJSON.pc  config.h  config.status  configure  libtool
Library3rdParty/AdvLog/Tools/AdvLog/: Makefile  advLog.pc  config.h  config.status  configure  libtool
Library3rdParty/AdvLog/autom4te.cache/: output.0  requests  traces.0  traces.1
Library3rdParty/curl-7.47.1/: Makefile  Makefile.in  config.status  configure  curl-config  libcurl.pc  libtool
Library3rdParty/curl-7.47.1/docs/: Makefile  Makefile.in
Library3rdParty/curl-7.47.1/docs/examples/: Makefile  Makefile.in
Library3rdParty/curl-7.47.1/docs/libcurl/: Makefile  libcurl-symbols.3
Library3rdParty/curl-7.47.1/include/: Makefile
Library3rdParty/curl-7.47.1/include/curl/: Makefile
Library3rdParty/curl-7.47.1/lib/: Makefile  curl_config.h  libcurl.la
Library3rdParty/curl-7.47.1/lib/.libs/: libcurl.la  libcurl.lai
Library3rdParty/curl-7.47.1/scripts/: Makefile
Library3rdParty/curl-7.47.1/src/: Makefile  curl  tool_hugehelp.c
Library3rdParty/curl-7.47.1/tests/: Makefile
Library3rdParty/libmodbus-3.1.2/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  libtool
Library3rdParty/libmodbus-3.1.2/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
Library3rdParty/libmodbus-3.1.2/doc/: Makefile  Makefile.in
Library3rdParty/libmodbus-3.1.2/src/: Makefile  Makefile.in  modbus-data.lo  modbus-rtu.lo  modbus-tcp.lo  modbus.lo
Library3rdParty/libmodbus-3.1.2/tests/: Makefile  Makefile.in  bandwidth-client  bandwidth-server-many-up  bandwidth-server-one  random-test-client  random-test-server  unit-test-client  unit-test-server  version
Library3rdParty/mosquitto-1.4.10/lib/: time_mosq.c  tls_mosq.c
Platform/: Makefile  Makefile.in  NamedPipeClient.h  NamedPipeServer.h  WISEPlatform.rc  WISEPlatform.vcproj  WISEPlatform.vcxproj  WISEPlatform.vcxproj.filters  WISEUtil.rc  WISEUtil.vcproj  WISEUtil.vcxproj  WISEUtil.vcxproj.filters  basequeue.c  basequeue.h  export.h  resource.h  resource1.h  service.h  util_libloader.h  util_os.h  util_path.h  util_pipe.h  util_power.h  util_process.h  util_string.h  version.h
Platform/.deps/: basequeue.Plo
Platform/Linux/: NamedPipeClient.c  NamedPipeServer.c  network.c  service.c  util_libloader.c  util_os.c  util_path.c  util_pipe.c  util_power.c  util_process.c  util_string.c
Platform/Linux/.deps/: NamedPipeClient.Plo  NamedPipeServer.Plo  network.Plo  service.Plo  util_libloader.Plo  util_os.Plo  util_path.Plo  util_power.Plo  util_process.Plo  util_string.Plo
Platform/Windows/: NamedPipeClient.c  NamedPipeServer.c  dlfcn.c  dlfcn.h  getopt.cpp  getopt.h  network.c  pthread.c  pthread.h  service.c  stdint.h  util_libloader.c  util_os.c  util_path.c  util_pipe.c  util_power.c  util_process.c  util_string.c
Platform/Windows/sys/: shm.cpp  shm.h  time.cpp  time.h
Sample/GPSHandler/: GPSHandler.c  GPSHandler.vcproj  GPSHandler.vcxproj
Sample/HandlerSample/: HandlerSample.vcproj  HandlerSample.vcxproj  HandlerSample.vcxproj.filters  Makefile  Makefile.am  handler_api.c
Sample/ModbusSample/: Makefile  Makefile.am  ModbusSample.vcproj  ModbusSample.vcxproj  Modbus_Handler.cpp
Sample/Modbus_Handler/: Makefile  Makefile.am  Makefile.in  Modbus_Handler.cpp  Modbus_Handler.ini  Modbus_Handler.vcproj  Modbus_Handler.vcxproj
Sample/Modbus_Handler/.deps/: Modbus_Handler.Plo  Modbus_Parser.Plo
Sample/MosquittoSample/: MosquittoSample.c  MosquittoSample.vcproj
Sample/SampleAgent/: Makefile  Makefile.am  SampleAgent.vcproj  SampleAgent.vcxproj  SampleAgent.vcxproj.filters  sampleagent.c
Sample/SampleClient/: SampleClient.cpp  SampleClient.vcproj  SampleClient.vcxproj  SampleClient.vcxproj.filters
Sample/SampleHandler/: SampleHandler.cpp  SampleHandler.vcproj  SampleHandler.vcxproj
Sample/SampleMBackupHandler/: Makefile.am  SampleMBackupHandler.cpp  SampleMBackupHandler.h  SampleMBackupHandler.vcproj  SampleMBackupHandler.vcxproj  SampleMBackupHandler.vcxproj.filters
Sample/SampleVirtualHandler/: Makefile.am  SampleVirtualHandler.cpp  SampleVirtualHandler.vcproj  SampleVirtualHandler.vcxproj
Sample/WISECoreSample/: Makefile  Makefile.in  WISECoreSample.c  WISECoreSample.vcproj  WISECoreSample.vcxproj  WISECoreSample.vcxproj.filters  capability.txt
Sample/WISECoreSample/.deps/: WISECoreSample.Po
(+84 files in other folders)
