SUBDIRS = Library/Log \
	  Platform \
	  Library/MosquittoCarrier \
	  Library/MQTTConnector \
	  Library/WISECore \
	  Library/cJSON \
	  Library/DES \
	  Library/Base64 \
	  Library/SAClient \
	  Library/SAConfig \
	  Library/FtpHelper \
	  Library/MD5 \
	  Library/SAManager \
	  Library/SAGeneralHandler \
	  Library/SAHandlerLoader \
	  Library/MessageGenerator \
	  Library/ReadINI \
	  Library/HandlerKernel \
	  Sample/SampleAgent \
	  Sample/HandlerSample \
	  Sample/Modbus_Handler \
	  Sample/WISECoreSample
	 
	  
ACLOCAL_AMFLAGS = -I m4
