SUBDIRS = Library/Log \
	  Library/cJSON \
	  Library/DES \
	  Library/Base64 \
	  Library/SAClient \
	  Library/SAConfig \
	  Library/FtpHelper \
	  Library/MD5 \
	  Library/MessageGenerator \
	  Library/SAManager \
	  Library/SAGeneralHandler \
	  Library/SAHandlerLoader \
	  Library/ReadINI \
	  Library/HandlerKernel \
	  Sample/SampleAgent \
	  Sample/HandlerSample \
	  Sample/ModbusSample
	 
	  
ACLOCAL_AMFLAGS = -I m4
